Pencil and trash can no longer hidden for spill panels in setup view

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -1016,7 +1016,6 @@ nav.navbar{
                         float: right;
                         cursor: pointer;
                         margin-right: 10px;
-                        display: none;
                     }
 
                     .trash{
@@ -1025,7 +1024,6 @@ nav.navbar{
                         padding: 2px;
                         float:right;
                         cursor: pointer;
-                        display: none;
                     }
                     .coords{
                         .label;
